Closed Bug 1316486 Opened 9 years ago Closed 6 years ago

conformance2/state/gl-object-get-calls.html failures

Categories

(Core :: Graphics: CanvasWebGL, defect, P3)

defect

Tracking

()

RESOLVED FIXED
Tracking Status
firefox52 --- wontfix

People

(Reporter: pchang, Unassigned)

Details

(Whiteboard: [gfx-noted])

Attachments

(1 file)

[Failures] Test cases where name == 0 PASS gl.getFramebufferAttachmentParameter(gl.FRAMEBUFFER, gl.COLOR_ATTACHMENT0, gl.FRAMEBUFFER_ATTACHMENT_OBJECT_TYPE) is gl.NONE FAIL getError expected: INVALID_OPERATION. Was NO_ERROR : PASS gl.getFramebufferAttachmentParameter(gl.FRAMEBUFFER, gl.DEPTH_ATTACHMENT, gl.FRAMEBUFFER_ATTACHMENT_OBJECT_TYPE) is gl.NONE PASS gl.getVertexAttrib(1, gl.VERTEX_ATTRIB_ARRAY_BUFFER_BINDING) is null PASS getError was expected value: NO_ERROR :
gl.bindrenderbuffer should return invalid operation with a deleted render buffer.
Comment on attachment 8809265 [details] Bug 1316486 - BindRenderbuffer should return invalid operation with a deleted render buffer input, https://reviewboard.mozilla.org/r/91846/#review91850
Attachment #8809265 - Flags: review?(mtseng) → review+
Pushed by pchang@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/b04c5c12b200 BindRenderbuffer should return invalid operation with a deleted render buffer input, r=mtseng
Flags: needinfo?(howareyou322)
Backout by cbook@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/827b1805b724 Backed out changeset b04c5c12b200 for webgl failures
(In reply to Pulsebot from comment #7) > Backout by cbook@mozilla.com: > https://hg.mozilla.org/integration/autoland/rev/827b1805b724 > Backed out changeset b04c5c12b200 for webgl failures I think we have to update the test case too because API changes.
Flags: needinfo?(howareyou322)
Mass wontfix for bugs affecting firefox 52.
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: