Bug 1316486 - BindRenderbuffer should return invalid operation with a deleted render buffer input, r=mtseng

MozReview-Commit-ID: Gu976wWy352